Fix path for css and js. 19 Des 2025, 21:28

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.10.0/dist/css/bootstrap-datepicker.min.css">
 
     <!-- Custom Own CSS -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Tailwind CSS CDN -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
@@ -32,7 +32,7 @@
                 <div class="container-fluid">   
     
                     <a class="navbar-brand d-flex align-items-center" href="#">
-                        <img src="/assets/path.gif" alt="Logo" width="40" height="40" class="rounded-circle me-2" >
+                        <img src="assets/path.gif" alt="Logo" width="40" height="40" class="rounded-circle me-2" >
                     </a>
     
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -79,7 +79,7 @@
                 </header>
                 <div class="row">
                     <div class="col-lg-4">
-                        <img src="/assets/company.jpg" alt="Logo Company" class="img-fluid w-100" style="object-fit: cover;">
+                        <img src="assets/company.jpg" alt="Logo Company" class="img-fluid w-100" style="object-fit: cover;">
                     </div>
                     <div class="col-lg-8">
                         <div class="row">
@@ -118,7 +118,7 @@
                     <div class="col-md-4 mb-4">
                         <figure>
                             <img
-                                src="/assets/founder.png"
+                                src="assets/founder.png"
                                 alt="Founder"
                                 class="img-fluid rounded-circle mb-3 img_headquarter"
                             >
@@ -131,7 +131,7 @@
                     <div class="col-md-4 mb-4">
                         <figure>
                             <img
-                                src="/assets/co-founder.png"
+                                src="assets/co-founder.png"
                                 alt="Co-Founder"
                                 class="img-fluid rounded-4 mb-3 img_headquarter"
                             >
@@ -144,7 +144,7 @@
                     <div class="col-md-4 mb-4">
                         <figure>
                             <img
-                                src="/assets/director.png"
+                                src="assets/director.png"
                                 alt="Director"
                                 class="img-fluid rounded-4 mb-3 img_headquarter"
                             >
@@ -245,7 +245,7 @@
     <!-- Datepicker -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.10.0/dist/js/bootstrap-datepicker.min.js"></script>
     <!-- Custom Own JS -->
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
